minor fixes, added map infomation, colony death, inventory colors

--- a/src/stages/game/client/client.css
+++ b/src/stages/game/client/client.css
@@ -75,3 +75,12 @@ td {
 .inventory-low {
   color: red;
 }
+.inventory-critial {
+  color: red;
+  animation: blinker 1s linear infinite;
+}
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
