--- a/src/stages/game/client/client.css
+++ b/src/stages/game/client/client.css
@@ -38,6 +38,7 @@ body, html {
   height: 252px;
   background-color: rgb(100, 100, 100);
   color: white;
+  resize: none;
 }
 #chat-input-group {
   padding-left: 5px;
