--- a/src/stages/game/client/client.css
+++ b/src/stages/game/client/client.css
@@ -1,5 +1,6 @@
 body, html {
   height: 100%;
+  background-color: rgb(89, 71, 50);
 }
 .bg {
   /* The image used */
@@ -12,27 +13,38 @@ body, html {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  padding: 20px;
 }
 
 .windowbg {
   background-color: rgb(50, 50, 50);
-  margin: 20px;
+  margin-bottom: 20px;
   padding: 5px;
-  width: 600px;
+  /* width: 600px; */
+}
+
+.title {
+  color: white
 }
 
 #map-view {
-  height: 330px;
+  height: 354px;
+}
+#map-container {
+  /* padding-left: 5px;
+  padding-right: 5px; */
 }
 #map-canvas {
   background-image: url("./../../../../assets/mars-map.png");
-  background-clip: content-box;
-  width: 590px;
+  /* background-position: center;
+  background-clip: content-box; */
+  background-size: 100%;
   height: 320px;
+  width: 100%;
 }
 
 #chat-view {
-  height: 300px;
+  height: 322px;
 }
 #chat-log {
   height: 252px;
