name of the colony added at the top of the inventory

--- a/src/stages/game/client/client.css
+++ b/src/stages/game/client/client.css
@@ -27,6 +27,16 @@ body, html {
   color: white
 }
 
+
+#colony-title-container {
+}
+
+#colony-title {
+  font-size: 20px;
+  text-align: center;
+  width: 450px;
+}
+
 #map-view {
   height: 354px;
 }
