--- a/src/stages/game/client/client.css
+++ b/src/stages/game/client/client.css
@@ -27,6 +27,9 @@ body, html {
   color: white
 }
 
+.warning {
+  background-color: orange;
+}
 
 #colony-title-container {
 }
@@ -56,10 +59,13 @@ body, html {
 #chat-view {
   height: 342px;
 }
+#chatTabs {
+  background-color: rgb(200, 200, 200);
+}
 .chat-log {
   height: 225px;
-  background-color: rgb(100, 100, 100);
-  color: white;
+  /* background-color: rgb(200, 200, 200); */
+  color: black;
   resize: none;
 }
 #chat-input-group {
