--- a/src/stages/game/client/client.css
+++ b/src/stages/game/client/client.css
@@ -58,11 +58,13 @@ body, html {
 #chatTabs {
   background-color: rgb(200, 200, 200);
 }
-.chat-log {
+#chat-log {
   height: 225px;
-  /* background-color: rgb(200, 200, 200); */
-  color: black;
-  resize: none;
+  background-color: rgb(100, 100, 100);
+  color: white;
+  border: 1px solid white;
+  overflow: auto;
+  padding: 2px;
 }
 #chat-input-group {
   padding-left: 5px;
