moved image for survey

--- a/src/stages/survey/client/client.css
+++ b/src/stages/survey/client/client.css
@@ -1,4 +1,4 @@
 .jumbotron {
-    background-image: url(../img/survey-back.png);
+    background-image: url(./../../../../assets/survey-back.png);
     background-size: cover;
 }
