--- a/src/stages/game/client/client.css
+++ b/src/stages/game/client/client.css
@@ -53,7 +53,7 @@ body, html {
 }
 
 #chat-view {
-  height: 342px;
+  /*height: 342px;*/
 }
 #chatTabs {
   background-color: rgb(200, 200, 200);
@@ -110,6 +110,10 @@ body, html {
 #production-view {
   padding-left: 5px;
   padding-right: 5px;
+}
+
+.table {
+  margin-bottom: 0px;
 }
 
 td {
